Temporary fix: Re-add overflow hidden on root, and disable filter test

--- a/src/client/components/filter/FilterCards/FilterCards.css
+++ b/src/client/components/filter/FilterCards/FilterCards.css
@@ -63,6 +63,10 @@
   display: none;
 }
 
+#root {
+  overflow: hidden;
+}
+
 .Filters__swiper-container {
   height: 125px;
   padding: 1rem 0 1rem 0;
